[package]
name = "music_data"
version = "0.1.0"
authors = ["moonsungchul <moonsuchstar@firemstar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "19.0.1"

[dependencies.rusqlite]
version = "0.24.0"
features = ["bundled"]